attempt to help the note window perform better and get rid of the cropping. (aka Stop doing layouts, let the content of the note window be 'auto layout' instead of ext trying to layout)
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@12263 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_notes.scss
+++ b/src/main/resources/scss/_notes.scss
@@ -995,7 +995,7 @@
 				.footer {
 					.action {
 						&.whiteboard {
-							background-position: 2px 0;
+							background-position: 2px 12px;
 						}
 					}
 				}
@@ -1066,7 +1066,7 @@
 		.note-reply-container {
 			.note-reply {
 				padding-left: 60px;
-				background-position: 48px 0;
+				background-position: 48px 15px;
 			}
 			.note-reply-container {
 				.note-reply.first {
